Multi Hydra configuration added
