# docs/swagger.json
@@ -58,6 +58,12 @@
                     },
                     {
                         "type": "string",
+                        "description": "Default value is Bouncer. Use 'accounts' value for Accounts Hydra",
+                        "name": "hydra",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
                         "description": "Bearer \u003cBouncer_access_token\u003e",
                         "name": "Authorization",
                         "in": "header",
